src/resources/solid-responsive.css
@media (max-width: 1199px) {

    /* ===================== Layout  ============================= */

    .sidebar-right {
        z-index: 99 !important;
    }

    .sidebar-left {
        z-index: 99 !important;
    }

    .sidebar-backdrop {
        display: block !important;
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent dark overlay */
        z-index: 98; /* Below sidebar but above content */
        transition: opacity 0.3s ease;
        cursor: pointer;
    }

    .main-content.shifted {
        margin-left: 70px !important;
        /* backdrop-filter: blur(20px); */
        /* background-color: rgba(0, 0, 0, 0.2); */
        /* transition: backdrop-filter 0.3s ease, background-color 0.3s ease; */
    }

    .main-content.main-content.shifted .page-parent-wrapper {
        backdrop-filter: blur(10px) !important;
    }


    /* ================================= Menu ============================= */

    .navbar-menu {
        gap: 12px !important;
        margin-top: 8px !important;
    }


    /* ===================== Chatter Section ===================== */

    .chatter-section {
        flex: 0 0 auto;
        width: 45px;
        transition: all 0.3s ease;
        z-index: 5;
    }

    .chatter-section.open {
        position: absolute;
        right: 0;
        top: 0;
        width: 380px !important;
        height: 100%;
        z-index: 99;
        background-color: #fff;
        border-left: 1px solid var(--primary-light-color);
        max-width: calc(100% - 100px);
    }


    /* ===================== Solid Account Setting ===================== */
    .solid-account-setting-main {
        width: 80vw !important;
    }

    /* ===================== Solid Dialog  ===================== */

    .solid-field-dialog {
        width: 45rem !important;
        max-width: 90%;
    }

    .solid-confirm-dialog {
        width: 26rem !important;
    }

    .solid-change-dialog {
        width: 32rem !important;
    }

    .solid-common-dialog {
        width: 55rem !important;
    }

    /* ======================= Solid Import  ================================ */
    .solid-import-dialog {
        width: 75rem !important;
        max-width: 80% !important;
    }

    /* ======================= Solid Export ============================  */
    .ExportDialog {
        width: 75rem !important;
        max-width: 80% !important;
        height: auto !important;
    }

    /* ========================= Home ========================== */
    .solidModuleWelcomeSection {
        padding: 16px !important;
    }

    .solidModuleHomeColorCards {
        padding: 16px !important;
    }

    .solidModuleHomeActionCard {
        padding: 16px !important;
    }


    .solid-layout-accordion{
        max-width: 300px;
    }

}
/* ... */

